Generate all views for controllers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <main class="container w-full mx-auto mt-0 px-5 flex-col">
+    <main class="container w-full mx-auto mt-0 flex-col">
       <%= render "shared/navbar" %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
