--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,17 +2,18 @@
   <div class="container-fluid w-full flex flex-wrap items-center justify-between px-6">
     <div class="container-fluid flex">
       <a class="flex items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-1" href="#">
-        <img class="mr-2" src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" style="height: 20px" alt="" loading="lazy" />
-        <span class="font-medium">MDBootstrap</span>
+        <%= image_tag("logo.png", size: "30x30", alt: "Edit Entry") %>        
+        <% if current_user %>
+        <span class="font-medium ml-3"><%= current_user.first_name %> <%= current_user.last_name %></span>
+        <% else %>
+        <span class="font-medium ml-3">MDBootstrap</span>
+        <% end %>
       </a>
       <% if user_signed_in? %>
-        <a class="flex absolute right-0 items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-1" href="#">
-          <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "font-medium" %>
-        </a>
+        <%= link_to 'Back', 'javascript:history.back()', class: "flex absolute ml-3 right-0 items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-[90px]" %>
+        <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "flex absolute ml-3 right-0 items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-3" %>
       <% else %>
-        <a class="flex absolute right-0 items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-1" href="#">
-          <span class="font-medium">Login</span>
-        </a>
+        <%= link_to "Log in", new_user_session_path, class: "flex absolute  ml-3 right-0 items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-5" %>
       <% end %>
     </div>
   </div>
