--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,11 @@
-<div>
-  <h1 class="font-bold text-4xl">Users#index</h1>
-  <p>Find me in app/views/users/index.html.erb</p>
+<div class="container flex-col">
+  <div class="splash">
+    <div class="splash__logo">
+      <img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" alt="" loading="lazy" />
+    </div>
+    <div class="splash__links">
+      <a href="https://mdbootstrap.com/docs/standard/" target="_blank" class="btn btn-primary">Documentation</a>
+      <a href="https://mdbootstrap.com/docs/standard/getting-started/quick-start/" target="_blank" class="btn btn-primary">Quick start</a>
+    </div>
+  </div>
 </div>
